# proof-aggregation-benchmarks

./: README.md
groth16/: Cargo.toml
groth16/src/: has_json_repr.rs  has_primitive_repr.rs  lib.rs
groth16/src/data/: inputs.json  proof.json  vk.json
shared/: Cargo.toml
shared/src/: lib.rs
test-jolt/: Cargo.toml
test-jolt/guest/: Cargo.toml
test-jolt/guest/src/: lib.rs
test-jolt/src/: main.rs
test-nexus/: Cargo.toml
test-nexus/src/: main.rs
test-nexus/src/guest/: Cargo.toml
test-nexus/src/guest/src/: main.rs
test-risc0/: .gitignore  README.md
test-risc0/host/: Cargo.toml
test-risc0/host/src/: main.rs
test-risc0/methods/guest/: Cargo.toml
test-risc0/methods/guest/src/: main.rs
test-sp1/: README.md
test-sp1/program/: Cargo.toml
test-sp1/program/elf/: riscv32im-succinct-zkvm-elf
test-sp1/program/src/: main.rs
test-sp1/script/: Cargo.toml
