[package]
name = "groth16"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
serde = { version = "1.0.198", features = ["derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.116", default-features = false, features = ["std"] }
